[ALIEN-3553] fixes for JDK 11